fixed header styling

--- a/index.html
+++ b/index.html
@@ -5,32 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Landing Page</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <div class="navbar">
-            <div class="logo">Header Logo</div>
-            <ul>
-                <li><a href=""></a>header link one</li>
-                <li><a href=""></a>header link two</li>
-                <li><a href=""></a>header link three</li>
-            </ul>
-        </div>
-        <div class="intro">
-            <div class="hero">
-                <div class="hero-title">This website is awesome</div>
-                <div class="hero-content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                <button>Sign up</button>
+    <div class="content-container">
+        <div class="header">
+            <div class="navbar">
+                <div class="logo">Header Logo</div>
+                <ul>
+                    <li><a href=""></a>header link one</li>
+                    <li><a href=""></a>header link two</li>
+                    <li><a href=""></a>header link three</li>
+                </ul>
             </div>
-            <img src="image placeholder.jpg">
+            <div class="intro">
+                <div class="hero">
+                    <div class="hero-title">This website is awesome</div>
+                    <div class="hero-content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                    <button>Sign up</button>
+                </div>
+                <div class="image">
+                    <img src="image placeholder.jpg">
+                </div>
+            </div>
         </div>
+        <div class="content">
+            <div class="information-header">Some random text</div>
+            <div class="card-container"></div>
+        </div>
+        <div class="quote"></div>
+        <div class="sign-up-call-out"></div>
+        <div class="footer"></div>
     </div>
-    <div class="content">
-        <div class="information-header">Some random text</div>
-        <div class="card-container"></div>
-    </div>
-    <div class="quote"></div>
-    <div class="sign-up-call-out"></div>
-    <div class="footer"></div>
 </body>
 </html>
