--- a/index.html
+++ b/index.html
@@ -33,12 +33,27 @@
             </div>
         </div>
         <div class="content">
-            <div class="information-header">Some random text</div>
-            <div class="card-container"></div>
+            <div class="information-header">Some random information.</div>
+            <div class="card-container">
+                <div class="card-item">
+                    <div class="card-img"></div>
+                    <div class="card-content">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card-item">
+                    <div class="card-img"></div>
+                    <div class="card-content">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
         </div>
-        <div class="quote"></div>
-        <div class="sign-up-call-out"></div>
-        <div class="footer"></div>
+        <div class="quote">
+
+        </div>
+        <div class="sign-up-call-out">
+
+        </div>
+        <div class="footer">
+
+        </div>
     </div>
 </body>
 </html>
