--- a/index.html
+++ b/index.html
@@ -43,16 +43,36 @@
                     <div class="card-img"></div>
                     <div class="card-content">this is some subtext under an illustration or image</div>
                 </div>
+                <div class="card-item">
+                    <div class="card-img"></div>
+                    <div class="card-content">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card-item">
+                    <div class="card-img"></div>
+                    <div class="card-content">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
-        <div class="quote">
-
+        <div class="quote-container">
+            <div class="quote-content">
+                This is an awe-inspiring quote, or a testimonial from a customer. Maybe it's just filling 
+                up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="quote-author">-Thor, God of Thunder</div>
         </div>
         <div class="sign-up-call-out">
-
+            <div class="call-to-action">
+                <div class="CTA-left">
+                    <div class="CTAL-Title">Call to action! It's time!</div>
+                    <div class="CTAL-Content">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="CTA-right">
+                    <button>Sign up</button>
+                </div>
+            </div>
         </div>
         <div class="footer">
-
+            <p>Copyright &copy The Odin Project 2024</p>
         </div>
     </div>
 </body>
